@@ -47,17 +47,18 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <hibernate.version>3.6.0.Final</hibernate.version>
+        <hibernate.version>3.6.8.Final</hibernate.version>
         <c3p0.version>0.9.1.2</c3p0.version>
         <spring.version>3.1.0.RELEASE</spring.version>
-        <spring.sec.version>3.1.0.RELEASE</spring.sec.version>
         <spring.web.version>2.2.1.RELEASE</spring.web.version>
         <slf4j.version>1.6.1</slf4j.version>
         <powermock.version>1.4.7</powermock.version>
         <varying.target.dir>target</varying.target.dir>
-        <liquibase.version>2.0.0</liquibase.version>
-        <mysql.connector.version>5.1.13</mysql.connector.version>
+        <liquibase.version>2.0.3</liquibase.version>
+        <mysql.connector.version>5.1.18</mysql.connector.version>
         <jetty.version>7.3.0.v20110203</jetty.version>
+        <jackson.version>1.9.3</jackson.version>
+        <maven.surefire.memory>-Xmx1024m -XX:MaxPermSize=128m</maven.surefire.memory>
         <targetJdk>1.6</targetJdk>
         <birt.version>2.5.0</birt.version>
         <birt.libs.groupId>org.mifos.birtlibs</birt.libs.groupId>
@@ -270,12 +271,12 @@
             <dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-acl</artifactId>
-                <version>${spring.sec.version}</version>
+                <version>${spring.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-taglibs</artifactId>
-                <version>${spring.sec.version}</version>
+                <version>${spring.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
@@ -316,12 +317,12 @@
             <dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-core</artifactId>
-                <version>${spring.sec.version}</version>
+                <version>${spring.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-config</artifactId>
-                <version>${spring.sec.version}</version>
+                <version>${spring.version}</version>
             </dependency>
             <dependency>
 	            <groupId>org.springframework</groupId>
@@ -378,7 +379,7 @@
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
-                <version>5.1.13</version>
+                <version>${mysql.connector.version}</version>
             </dependency>
             <dependency>
                 <groupId>findbugs</groupId>
@@ -425,7 +426,7 @@
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-validator</artifactId>
-                <version>4.1.0.Final</version>
+                <version>4.2.0.Final</version>
             </dependency>
             <dependency>
                 <groupId>javax.validation</groupId>
@@ -483,12 +484,12 @@
             <dependency>
                 <groupId>org.codehaus.jackson</groupId>
                 <artifactId>jackson-core-asl</artifactId>
-                <version>1.8.5</version>
+                <version>${jackson.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.codehaus.jackson</groupId>
                 <artifactId>jackson-mapper-asl</artifactId>
-                <version>1.8.5</version>
+                <version>${jackson.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.thoughtworks.xstream</groupId>
@@ -498,7 +499,7 @@
             <dependency>
                 <groupId>javassist</groupId>
                 <artifactId>javassist</artifactId>
-                <version>3.4.GA</version>
+                <version>3.12.1.GA</version>
             </dependency>
             <dependency>
                 <groupId>commons-beanutils</groupId>
@@ -765,7 +766,7 @@
                 </plugin>
                 <plugin>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.9</version>
+                    <version>2.11</version>
             	</plugin>
             	
         		<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
